--- a/index.html
+++ b/index.html
@@ -5,12 +5,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prueba Avirato</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
+    <h1>Tres en raya</h1>
+
+    <div class="container">
+        <button class="btn btn-primary">Iniciar</button>
+        <div class="celda" data-posicion="0"></div>
+        <div class="celda" data-posicion="1"></div>
+        <div class="celda" data-posicion="2"></div>
+        <div class="celda" data-posicion="3"></div>
+        <div class="celda" data-posicion="4"></div>
+        <div class="celda" data-posicion="5"></div>
+        <div class="celda" data-posicion="6"></div>
+        <div class="celda" data-posicion="7"></div>
+        <div class="celda" data-posicion="8"></div>
+    </div>
+    <h3 class="turno"></h3>
 
 
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+        crossorigin="anonymous"></script>
     <script src="js/avirato.js"></script>
 
 </body>
