Terminada lógica para que el juego se inicie con valores aleatorios

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <h1>Tres en raya</h1>
 
     <div class="container">
-        <button class="btn btn-primary">Iniciar</button>
+        <div class="botones">
+            <button class="btnIniciar btn btn-primary">Iniciar</button>
+            <button class="btnReset btn btn-danger">Reset</button>
+        </div>
         <div class="celda" data-posicion="0"></div>
         <div class="celda" data-posicion="1"></div>
         <div class="celda" data-posicion="2"></div>
